# sololedger

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
sololedger/: __init__.py  app.py
sololedger/domain/: __init__.py  activity.py  client.py  financial_entry.py  ledger.py  period.py
sololedger/persistence/: __init__.py  repository.py  sqlite_repository.py
sololedger/reporting/: __init__.py  report.py  report_calculator.py
sololedger/ui/: activities_tab.py  add_entry_tab.py  app.py  clients_tab.py  entries_tab.py  report_tab.py  sololedger.tcss
tests/: test_activity.py  test_client.py  test_financial_entry.py  test_ledger.py  test_period.py  test_report.py  test_report_calculator.py  test_sqlite_repository.py
